# celerix-store-rust

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  USAGE.md
.github/workflows/: publish.yml
data/: p1.json
src/: lib.rs
src/engine/: memstore.rs  mod.rs  persistence.rs  vault.rs
src/sdk/: client.rs  discovery.rs  mod.rs
src/server/: mod.rs  router.rs
tests/: integration_test.rs
