[package]
name = "celerix-store"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
aes-gcm = "0.10"
hex = "0.4"

[[bin]]
name = "celerix-stored"
path = "src/bin/stored.rs"

[[bin]]
name = "celerix"
path = "src/bin/cli.rs"
